feat(websocket): Refactor TrackingSocket for enhanced real-time tracking features
- Updated WebSocket endpoint to support JWT token validation and user authorization.
- Implemented automatic reconnection and heartbeat mechanisms.
- Enhanced message handling for location updates and status changes.
- Introduced user context management for better session handling.
- Added error handling and logging improvements.

feat(db): Align database schema with specification requirements

- Updated users, routes, virtual_stops, and bookings tables to match new specifications.
- Added new columns, constraints, and triggers for business rule validation.
- Created location_tracking table for GPS data storage with GDPR compliance.

feat(db): Add performance optimization indexes

- Introduced various indexes across users, routes, bookings, and virtual_stops tables to improve query performance.
- Included geospatial indexes for location-based queries.
- Documented index usage guidelines and query optimization examples for future reference.